--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,22 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
+        mavenCentral()
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+        classpath 'com.android.tools.build:gradle:4.0.1'
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
+        mavenCentral()
+
     }
 }
 
