--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name=".test.demo.SpanDemoActivity"></activity>
+        <activity android:name=".test2.Test2Activity"></activity>
+        <activity android:name=".test.EditInputManagerActivity" />
+        <activity android:name=".test.demo.SpanDemoActivity" />
         <activity
             android:name=".test.SpanActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -21,7 +23,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
